# StaMPS

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  MAINTAINERS.md  NOTICE  PORT_README.md  README.md  SECURITY.md  StaMPS_CONFIG.bash  StaMPS_CONFIG.cmd  StaMPS_CONFIG.ps1  StaMPS_CONFIG.tcsh  install-windows.ps1  pyproject.toml  snaphu.conf
.github/: dependabot.yml  release-template.md
.github/workflows/: ci.yml  nightly-e2e.yml  release.yml  upstream-sync.yml
Manual/: StaMPS_Manual.tex
docs/: DEVELOPING.md  ROLLBACK.md  SIGNPATH_STATUS.md
matlab/: batchjob.m  combine_amp_dem.m  mt_prep_suggestion.m  parseplotprm.m  ps_calc_scla.m  ps_calc_tca.m  ps_load_initial.m  ps_load_initial_gamma.m  ps_load_initial_gsar.m  ps_plot_tca.m  ps_sb_merge.m  ps_scn_filt.m  ps_scn_filt_krig.m  ps_setref.m  ps_smooth_scla.m  ps_unwrap.m  ps_weed.m  sb_baseline_plot.m  sb_load_initial.m  sb_load_initial_gamma.m  splitaz.m  stamps_mc_header.m  ts_plot.m  ts_plotdiff.m  uw_interp.m  uw_stat_costs.m
matlab_compat/: gausswin.m  interp.m  sp_parse_ifg_dims.m  sp_read_numeric.m  sp_sync.m  sp_system.m  sp_which.m  sp_which_required.m  ts_export_batch.m  ts_export_picker.m
python/stamps/: __init__.py  _log.py  _matlab.py  _par.py  _paths.py  _shell.py  mt_extract_cands.py  mt_prep_snap.py
src/: CDisp.cpp  CDisp.h  CDispComp.cpp  CDispComp.h  CDispMag.h  CGetData.cpp  CGetData.h  CMakeLists.txt  Makefile  XInfo.cpp  bytescale.cpp  calamp.cpp  cpxsum.cpp  dismph.cpp  pscdem.cpp  psclonlat.cpp  pscphase.cpp  selpsc_patch.cpp  selsbc_patch.cpp  stamps_locale.h
tests/: conftest.py  test_acceptance.py  test_calamp_format.py  test_cmake_build.py  test_cstdint_audit.py  test_e2e_stamps.py  test_generate_fixtures.py  test_golden_byte_identity.py  test_install_windows_ps1.py  test_lint_no_csh.py  test_locale_pinning.py  test_log_helper.py  test_magic_fix.py  test_matlab_helper.py  test_mt_extract_cands.py  test_mt_prep_snap_cli.py  test_mt_prep_snap_concurrency.py  test_mt_prep_snap_files.py  test_mt_prep_snap_patches.py  test_mt_prep_snap_property.py  test_mt_prep_snap_regression.py  test_no_sha_placeholders.py  test_par_parser.py  test_paths.py  test_phase1_rename.py  test_phase_stamps_integration.py  test_selsbc_return.py  test_shell_helpers.py  test_shims.py  test_snaphu_build.py  test_stamps_config_cmd.py  test_stamps_config_ps1.py  test_wheel_metadata.py
tests/fixtures/: generate_fixtures.py
tests/golden/: NONDET.md  README.md  _verify.py  capture.sh
tests/golden/linux_csh/ps_single/: calamp.in  calamp.out  patch.list  pscdem.in  psclonlat.in  pscphase.in  rsc.txt  selpsc.in
tests/golden/linux_csh/ps_single/PATCH_1/: mean_amp.flt
tests/golden/linux_csh/sb_single/: calamp.in  calamp.out  pscdem.in  psclonlat.in  pscphase.in  rsc.txt  selsbc.in
tests/golden/linux_csh/sb_single/PATCH_1/: patch_noover.in
tests/matlab/: test_matlab_patches.m  test_sp_parse_ifg_dims.m  test_sp_read_numeric.m  test_sp_sync.m  test_sp_system.m  test_sp_which.m  test_ts_export_batch.m
tests/matlab/fixtures/: generate_ps_weed_large.m
